--- a/html/about.html
+++ b/html/about.html
@@ -25,28 +25,31 @@
         }
       });
     </script>
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="/assets/fonts/oswald-v53-latin-regular.woff2">
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="/assets/fonts/oswald-v53-latin-500.woff2">
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="/assets/fonts/oswald-v53-latin-600.woff2">
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="/assets/fonts/oswald-v53-latin-700.woff2">
-    <link rel="preload" as="image" type="image/webp" href="/assets/logos/business-logo-light.webp">
-    <link rel="preload" as="image" type="image/webp" href="/assets/logos/business-logo-dark.webp">
-    <link rel="preload" href="/css/critical.css" as="style">
-    <link rel="stylesheet" href="/css/critical.css">
-    <link rel="preload" href="/css/style.css" as="style">
-    <link rel="stylesheet" href="/css/style.css" media="print" onload="this.media='all'">
-    <link rel="preload" href="/css/style-pages.css" as="style">
-    <link rel="stylesheet" href="/css/style-pages.css">
-    <link rel="preload" href="/css/glide.css" as="style">
-    <link rel="stylesheet" href="/css/glide.css" media="print" onload="this.media='all'">
-    <link rel="preload" href="/css/dark-mode.css" as="style">
-    <link rel="stylesheet" href="/css/dark-mode.css">
-    <script type="module" src="/js/glide.min.js" defer></script>
-    <script src="/js/swup.js" defer></script>
-    <script type="module" src="/js/script.js" defer></script>
+    <base href="/Algarve-WebCraft/">
+    <link rel="icon" href="/Algarve-WebCraft/assets/logos/favicon-logo.ico" type="image/x-icon">
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="/Algarve-WebCraft/assets/fonts/oswald-v53-latin-regular.woff2">
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="/Algarve-WebCraft/assets/fonts/oswald-v53-latin-500.woff2">
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="/Algarve-WebCraft/assets/fonts/oswald-v53-latin-600.woff2">
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="/Algarve-WebCraft/assets/fonts/oswald-v53-latin-700.woff2">
+    <link rel="preload" as="image" type="image/webp" href="/Algarve-WebCraft/assets/logos/business-logo-light.webp">
+    <link rel="preload" as="image" type="image/webp" href="/Algarve-WebCraft/assets/logos/business-logo-dark.webp">
+    <link rel="preload" href="/Algarve-Webcraft/css/critical.css" as="style">
+    <link rel="stylesheet" href="/Algarve-Webcraft/css/critical.css">
+    <link rel="preload" href="/Algarve-Webcraft/css/style.css" as="style">
+    <link rel="stylesheet" href="/Algarve-Webcraft/css/style.css" media="print" onload="this.media='all'">
+    <link rel="preload" href="/Algarve-Webcraft/css/glide.css" as="style">
+    <link rel="stylesheet" href="/Algarve-Webcraft/css/glide.css" media="print" onload="this.media='all'">
+    <link rel="preload" href="/Algarve-Webcraft/css/style-pages.css" as="style">
+    <link rel="stylesheet" href="/Algarve-Webcraft/css/style-pages.css">
+    <link rel="preload" href="/Algarve-Webcraft/css/dark-mode.css" as="style">
+    <link rel="stylesheet" href="/Algarve-Webcraft/css/dark-mode.css">
+    <script type="module" src="/Algarve-Webcraft/js/glide.min.js" defer></script>
+    <script src="/Algarve-Webcraft/js/swup.js" defer></script>
+    <script src="/Algarve-Webcraft/js/gsap.min.js"></script>
+    <script type="module" src="/Algarve-Webcraft/js/script.js" defer></script>
     <noscript>
-      <link rel="stylesheet" href="/css/style.css">
-      <link rel="stylesheet" href="/css/glide.css">
+      <link rel="stylesheet" href="/Algarve-Webcraft/css/style.css">
+      <link rel="stylesheet" href="/Algarve-Webcraft/css/glide.css">
     </noscript>
     <title>Algarve WebCraft | Small Business Website Specialist</title>
   </head>
@@ -58,17 +61,17 @@
         <div class="wrapper wrapper--wide wrapper--header">
 
           <div class="business-logo-container">
-            <img src="/assets/logos/business-logo-light.webp" class="business-logo logo-front" width="200" height="70" fetchpriority="high" decoding="async" loading="eager" alt="Algarve Webcraft's logo. Landscape scenary of beach-side cliffs on the left, with the business name on the right (Algarve Webcraft) and its slogan below it (Small business website creator.)">
-            <img src="/assets/logos/business-logo-dark.webp" class="business-logo logo-back" width="200" height="70" fetchpriority="high" decoding="async" loading="eager" alt="" aria-hidden="true">
+            <img src="/Algarve-WebCraft/assets/logos/business-logo-light.webp" class="business-logo logo-front" width="200" height="70" fetchpriority="high" decoding="async" loading="eager" alt="Algarve Webcraft's logo. Landscape scenary of beach-side cliffs on the left, with the business name on the right (Algarve Webcraft) and its slogan below it (Small business website creator.)">
+            <img src="/Algarve-WebCraft/assets/logos/business-logo-dark.webp" class="business-logo logo-back" width="200" height="70" fetchpriority="high" decoding="async" loading="eager" alt="" aria-hidden="true">
           </div>
 
           <nav class="nav-bar">
             <ul>
-              <li><a href="/index.html">Home</a></li>
-              <li><a href="/html/about.html">About Us</a></li>
-              <li><a href="/html/services.html">Services</a></li>
-              <li><a href="/html/pricing.html">Pricing</a></li>
-              <li><a href="/html/contact.html">Contact</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="html/about.html">About Us</a></li>
+              <li><a href="html/services.html">Services</a></li>
+              <li><a href="html/pricing.html">Pricing</a></li>
+              <li><a href="html/contact.html">Contact</a></li>
             </ul>
           </nav>
 
@@ -145,19 +148,19 @@
               <p class="cmp-main-text cmp-main-text--pg2-s1">It was during this time that I realized how difficult it is for new or small businesses (especially in a small town) to invest thousands of euros upfront for a website. As a result, many business owners are left with only two options - go without a website entirely, or build one themselves using platforms like WordPress or Wix. While these page-builders are more affordable, they lead to generic, poorly performing websites that still require a lot of time and effort to manage as well as having to create it yourself.</p>
               <p class="cmp-main-text cmp-main-text--pg2-s1">So I began thinking about a business designed specifically to help small businesses that can not afford the high upfront costs of a website. Instead of a large one-time fee, owners can pay a small monthly fee while having everything taken care of, from the initial design, to all the updates and maintenance. This means business owners can focus 100% on what they do best while still having a high-quality, fully managed website that helps them grow and attract more customers. With this, Algarve Webcraft came to life!</p>
 
-              <a class="cmp-main-btn cmp-main-btn--light cmp-main-btn--pg2-s1" href="./contact.html">Contact Us</a>
+              <a class="cmp-main-btn cmp-main-btn--light cmp-main-btn--pg2-s1" href="html/contact.html">Contact Us</a>
             </div>
             <div class="who-image-block">
               <picture>
-                <source srcset="../assets/images/lagos-cliffs-l.webp" media="(min-width: 768px)" type="image/webp">
-                <source srcset="../assets/images/lagos-cliffs-s.webp" media="(max-width: 767px)" type="image/webp">
-                <img src="../assets/images/lagos-cliffs.jpg" class="who-image-block__first-image" alt="Cliffs on the Algarve coast." width="506px" height="674px" loading="lazy" decoding="async">
+                <source srcset="/Algarve-WebCraft/assets/images/lagos-cliffs-l.webp" media="(min-width: 768px)" type="image/webp">
+                <source srcset="/Algarve-WebCraft/assets/images/lagos-cliffs-s.webp" media="(max-width: 767px)" type="image/webp">
+                <img src="/Algarve-WebCraft/assets/images/lagos-cliffs.jpg" class="who-image-block__first-image" alt="Cliffs on the Algarve coast." width="506px" height="674px" loading="lazy" decoding="async">
               </picture>
 
               <picture class="who-image-block__second-image-container">
-                <source srcset="../assets/images/man-l.webp" media="(min-width: 768px)" type="image/webp">
-                <source srcset="../assets/images/man-s.webp" media="(max-width: 767px)" type="image/webp">
-                <img src="../assets/images/man.jpg" class="who-image-block__second-image" alt="A picture of Tayler Batista, the owner and lead developer of Algarve WebCraft.." width="268px" height="404px" loading="lazy" decoding="async">
+                <source srcset="/Algarve-WebCraft/assets/images/man-l.webp" media="(min-width: 768px)" type="image/webp">
+                <source srcset="/Algarve-WebCraft/assets/images/man-s.webp" media="(max-width: 767px)" type="image/webp">
+                <img src="/Algarve-WebCraft/assets/images/man.jpg" class="who-image-block__second-image" alt="A picture of Tayler Batista, the owner and lead developer of Algarve WebCraft.." width="268px" height="404px" loading="lazy" decoding="async">
               </picture>
             </div>
           </div>
@@ -178,23 +181,23 @@
 
           <div class="banner">
             <div class="slider" style="--quantity: 3">
-              <div class="item" style="--position: 1"><a href="https://tis-ta.github.io/Mushroom-Guide/">
+              <div class="item" style="--position: 1"><a href="https://Algarve-WebCraft.github.io/The-Garden-Bar-and-Grill/index.html">
                 <picture>
-                  <source srcset="../assets/images/mushroom-foraging-l.webp" media="(min-width: 768px)" type="image/webp">
-                  <source srcset="../assets/images/mushroom-foraging-s.webp" media="(max-width: 767px)" type="image/webp">
-                  <img src="../assets/images/mushroom-foraging.jpg" class="portfolio-images" width="500px" height="300px" alt="A screenshot of a website called 'Mushroom Foraging', created by Algarve Webcraft" decoding="async" loading="lazy"></a></div>
+                  <source srcset="/Algarve-WebCraft/assets/images/the-garden-l.webp" media="(min-width: 768px)" type="image/webp">
+                  <source srcset="/Algarve-WebCraft/assets/images/the-garden-s.webp" media="(max-width: 767px)" type="image/webp">
+                  <img src="/Algarve-WebCraft/assets/images/the-garden.jpg" class="portfolio-images" width="500px" height="300px" alt="A screenshot of a website called 'Mushroom Foraging', created by Algarve Webcraft" decoding="async" loading="lazy"></a></div>
               </picture>
-              <div class="item" style="--position: 2"><a href="https://tis-ta.github.io/Freelance-Portfolio/">
+              <div class="item" style="--position: 2"><a href="https://Algarve-WebCraft.github.io/Freelance-Portfolio/">
                 <picture>
-                  <source srcset="../assets/images/designer-portfolio-l.webp" media="(min-width: 768px)" type="image/webp">
-                  <source srcset="../assets/images/designer-portfolio-s.webp" media="(max-width: 767px)" type="image/webp">
-                  <img src="../assets/images/designer-portfolio.jpg" class="portfolio-images" width="500px" height="300px" alt="A screenshot of a website called 'Designer Profile', created by Algarve Webcraft" decoding="async" loading="lazy"></a></div>
+                  <source srcset="/Algarve-WebCraft/assets/images/designer-portfolio-l.webp" media="(min-width: 768px)" type="image/webp">
+                  <source srcset="/Algarve-WebCraft/assets/images/designer-portfolio-s.webp" media="(max-width: 767px)" type="image/webp">
+                  <img src="/Algarve-WebCraft/assets/images/designer-portfolio.jpg" class="portfolio-images" width="500px" height="300px" alt="A screenshot of a website called 'Designer Profile', created by Algarve Webcraft" decoding="async" loading="lazy"></a></div>
               </picture>
-              <div class="item" style="--position: 3"><a href="https://tis-ta.github.io/Mushroom-Guide/">
+              <div class="item" style="--position: 3"><a href="https://Algarve-WebCraft.github.io/Mushroom-Guide/">
                 <picture>
-                  <source srcset="../assets/images/mushroom-foraging-l.webp" media="(min-width: 768px)" type="image/webp">
-                  <source srcset="../assets/images/mushroom-foraging-s.webp" media="(max-width: 767px)" type="image/webp">
-                  <img src="../assets/images/mushroom-foraging.jpg" class="portfolio-images" width="500px" height="300px" alt="A screenshot of a website called 'Mushroom Foraging', created by Algarve Webcraft" decoding="async" loading="lazy"></a></div>
+                  <source srcset="/Algarve-WebCraft/assets/images/mushroom-foraging-l.webp" media="(min-width: 768px)" type="image/webp">
+                  <source srcset="/Algarve-WebCraft/assets/images/mushroom-foraging-s.webp" media="(max-width: 767px)" type="image/webp">
+                  <img src="/Algarve-WebCraft/assets/images/mushroom-foraging.jpg" class="portfolio-images" width="500px" height="300px" alt="A screenshot of a website called 'Mushroom Foraging', created by Algarve Webcraft" decoding="async" loading="lazy"></a></div>
               </picture>
             </div>
           </div>
@@ -244,7 +247,7 @@
       <!------------------------------------------------ FOOTER ---------------------------------------------------->
       <!------------------------------------------------------------------------------------------------------------>
 
-      <footer id="footer">
+      <footer id="footer" class="transition-reverse-slide">
         <svg class="footer__svg-page-decoration" viewBox="0 0 1440 150" aria-hidden="true">
           <path d="M0,0 C300,100 600,0 900,100 C1200,200 1440,0 1440,0 L1440,150 L0,150 Z" />
         </svg>
@@ -253,18 +256,18 @@
 
           <div class="footer-flex-container">
             <div class="footer__image-text-block">
-              <img src="../assets/logos/business-logo-light.webp" class="footer-business-logo" width="310" height="110" alt="" decoding="async" loading="lazy" aria-hidden="true">
+              <img src="/Algarve-WebCraft/assets/logos/business-logo-light.webp" class="footer-business-logo" width="310" height="110" alt="" decoding="async" loading="lazy" aria-hidden="true">
               <p>Our philosophy is that every small business deserves a website they can be proud of. No matter your size, your online presence should be built to grow with you. We are here to help make it happen!</p>
-              <a class="cmp-main-btn-footer" href="./contact.html">Get Started Now</a>
+              <a class="cmp-main-btn-footer" href="html/contact.html">Get Started Now</a>
             </div>
 
             <div class="footer__quick-links-block">
               <h3>Links</h3>
               <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="./about.html">Who We Are</a></li>
-                <li><a href="./services.html">What We Offer</a></li>
-                <li><a href="./pricing.html">Our Prices</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="html/about.html">Who We Are</a></li>
+                <li><a href="html/services.html">What We Offer</a></li>
+                <li><a href="html/pricing.html">Our Prices</a></li>
               </ul>
             </div>
 
@@ -297,9 +300,9 @@
             </div>
 
             <div>
-              <a href="./privacy.html"><strong>Privacy Policy</strong></a>
+              <a href="html/privacy.html"><strong>Privacy Policy</strong></a>
               <span>|</span>
-              <a href="./terms.html"><strong>Terms of Use</strong></a>
+              <a href="html/terms.html"><strong>Terms of Use</strong></a>
             </div>
           </div>
 
