--- a/html/privacy.html
+++ b/html/privacy.html
@@ -15,25 +15,31 @@
         }
       })();
     </script>
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="/assets/fonts/oswald-v53-latin-regular.woff2">
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="/assets/fonts/oswald-v53-latin-500.woff2">
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="/assets/fonts/oswald-v53-latin-600.woff2">
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="/assets/fonts/oswald-v53-latin-700.woff2">
-    <link rel="preload" as="image" type="image/webp" href="/assets/logos/business-logo-light.webp">
-    <link rel="preload" as="image" type="image/webp" href="/assets/logos/business-logo-dark.webp">
-    <link rel="preload" href="/css/critical.css" as="style">
-    <link rel="stylesheet" href="/css/critical.css">
-    <link rel="preload" href="/css/style.css" as="style">
-    <link rel="stylesheet" href="/css/style.css" media="print" onload="this.media='all'">
-    <link rel="preload" href="/css/style-pages.css" as="style">
-    <link rel="stylesheet" href="/css/style-pages.css">
-    <link rel="preload" href="/css/dark-mode.css" as="style">
-    <link rel="stylesheet" href="/css/dark-mode.css">
-    <script type="module" src="/js/glide.min.js" defer></script>
-    <script src="/js/swup.js" defer></script>
-    <script type="module" src="/js/script.js" defer></script>
+    <base href="/Algarve-WebCraft/">
+    <link rel="icon" href="/Algarve-WebCraft/assets/logos/favicon-logo.ico" type="image/x-icon">
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="/Algarve-WebCraft/assets/fonts/oswald-v53-latin-regular.woff2">
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="/Algarve-WebCraft/assets/fonts/oswald-v53-latin-500.woff2">
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="/Algarve-WebCraft/assets/fonts/oswald-v53-latin-600.woff2">
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="/Algarve-WebCraft/assets/fonts/oswald-v53-latin-700.woff2">
+    <link rel="preload" as="image" type="image/webp" href="/Algarve-WebCraft/assets/logos/business-logo-light.webp">
+    <link rel="preload" as="image" type="image/webp" href="/Algarve-WebCraft/assets/logos/business-logo-dark.webp">
+    <link rel="preload" href="/Algarve-Webcraft/css/critical.css" as="style">
+    <link rel="stylesheet" href="/Algarve-Webcraft/css/critical.css">
+    <link rel="preload" href="/Algarve-Webcraft/css/style.css" as="style">
+    <link rel="stylesheet" href="/Algarve-Webcraft/css/style.css" media="print" onload="this.media='all'">
+    <link rel="preload" href="/Algarve-Webcraft/css/glide.css" as="style">
+    <link rel="stylesheet" href="/Algarve-Webcraft/css/glide.css" media="print" onload="this.media='all'">
+    <link rel="preload" href="/Algarve-Webcraft/css/style-pages.css" as="style">
+    <link rel="stylesheet" href="/Algarve-Webcraft/css/style-pages.css">
+    <link rel="preload" href="/Algarve-Webcraft/css/dark-mode.css" as="style">
+    <link rel="stylesheet" href="/Algarve-Webcraft/css/dark-mode.css">
+    <script type="module" src="/Algarve-Webcraft/js/glide.min.js" defer></script>
+    <script src="/Algarve-Webcraft/js/swup.js" defer></script>
+    <script src="/Algarve-Webcraft/js/gsap.min.js"></script>
+    <script type="module" src="/Algarve-Webcraft/js/script.js" defer></script>
     <noscript>
-      <link rel="stylesheet" href="/css/style.css">
+      <link rel="stylesheet" href="/Algarve-Webcraft/css/style.css">
+      <link rel="stylesheet" href="/Algarve-Webcraft/css/glide.css">
     </noscript>
     <title>Algarve WebCraft | Small Business Website Specialist</title>
   </head>
@@ -45,17 +51,17 @@
         <div class="wrapper wrapper--wide wrapper--header">
 
           <div class="business-logo-container">
-            <img src="/assets/logos/business-logo-light.webp" class="business-logo logo-front" width="200" height="70" fetchpriority="high" decoding="async" loading="eager" alt="Algarve Webcraft's logo. Landscape scenary of beach-side cliffs on the left, with the business name on the right (Algarve Webcraft) and its slogan below it (Small business website creator.)">
-            <img src="/assets/logos/business-logo-dark.webp" class="business-logo logo-back" width="200" height="70" fetchpriority="high" decoding="async" loading="eager" alt="" aria-hidden="true">
+            <img src="/Algarve-WebCraft/assets/logos/business-logo-light.webp" class="business-logo logo-front" width="200" height="70" fetchpriority="high" decoding="async" loading="eager" alt="Algarve Webcraft's logo. Landscape scenary of beach-side cliffs on the left, with the business name on the right (Algarve Webcraft) and its slogan below it (Small business website creator.)">
+            <img src="/Algarve-WebCraft/assets/logos/business-logo-dark.webp" class="business-logo logo-back" width="200" height="70" fetchpriority="high" decoding="async" loading="eager" alt="" aria-hidden="true">
           </div>
 
           <nav class="nav-bar">
             <ul>
-              <li><a href="/index.html">Home</a></li>
-              <li><a href="/html/about.html">About Us</a></li>
-              <li><a href="/html/services.html">Services</a></li>
-              <li><a href="/html/pricing.html">Pricing</a></li>
-              <li><a href="/html/contact.html">Contact</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="html/about.html">About Us</a></li>
+              <li><a href="html/services.html">Services</a></li>
+              <li><a href="html/pricing.html">Pricing</a></li>
+              <li><a href="html/contact.html">Contact</a></li>
             </ul>
           </nav>
 
@@ -221,7 +227,7 @@
       <!------------------------------------------------ FOOTER ---------------------------------------------------->
       <!------------------------------------------------------------------------------------------------------------>
 
-      <footer id="footer">
+      <footer id="footer" class="transition-reverse-slide">
         <svg class="footer__svg-page-decoration" viewBox="0 0 1440 150" aria-hidden="true">
           <path d="M0,0 C300,100 600,0 900,100 C1200,200 1440,0 1440,0 L1440,150 L0,150 Z" />
         </svg>
@@ -230,7 +236,7 @@
 
           <div class="footer-flex-container">
             <div class="footer__image-text-block">
-              <img src="../assets/logos/business-logo-light.webp" class="footer-business-logo" width="310" height="110" alt="" decoding="async" loading="lazy" aria-hidden="true">
+              <img src="../Algarve-WebCraft/assets/logos/business-logo-light.webp" class="footer-business-logo" width="310" height="110" alt="" decoding="async" loading="lazy" aria-hidden="true">
               <p>Our philosophy is that every small business deserves a website they can be proud of. No matter your size, your online presence should be built to grow with you. We are here to help make it happen!</p>
               <a class="cmp-main-btn-footer" href="./contact.html">Get Started Now</a>
             </div>
